[package]
name = "rageagain"
version = "2.0.0"
authors = ["Patrick Galbraith <patrick.j.galbraith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
askama = "0.10"
askama_warp = "0.10"
mysql_async = "0.24"
dotenv = "0.15"
chrono = "0.4"