[package]
name = "rageagain"
version = "2.0.0"
authors = ["Patrick Galbraith <patrick.j.galbraith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
dotenv = "0.15"